# agent_mcp

./: .gitignore  langcahin_openai.py  pyproject.toml  test.py
agent/: multi_chat.py
agent/code_agent/: agent_chat.py  multi_chat.py
agent/mcp/: powershell_tools.py  shell_tool.py  terminal_tools.py
agent/model/: llm_qwen.py
agent/prompts/: multi_chat_prompt.py
agent/rag/: rag.py
agent/tools/: file_tools.py  powershell_tools.py  shell_tool.py  terminal_tools.py
agent/utils/: mcp.py
bailian/: bailian_agent.py  bailian_output_parser.py  bailian_python_perl.py  bailian_tools.py  bailian_tools_decorator.py
common/: chat_prompt_template.py  llm.py
mcp/: mcp_amap.py
mcp/stdio/: mcp_stdio_client.py  mcp_stdio_server.py  playwrite_stdio_client.py
project/autogpt/: main.py
project/sales_chatbot/: chroma.py  sales.py  sales_chatbot.py
project/test/: the_old_man_and_the_sea.txt
