[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.1.1",
    "dashscope>=1.24.6",
    "google-search-results>=2.4.2",
    "gradio>=5.49.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
]

[tool.uv.workspace]
members = [
    "agent_mcp",
]
